Alteração do componente Section para receber um título, e duas areas de conteudo uma do lado da outra; Alteração do logo e background-image da Landing-Page e pequenas modificações na estilização da página.

--- a/Orange-notes-Interface/src/reset.css
+++ b/Orange-notes-Interface/src/reset.css
@@ -26,5 +26,5 @@ footer, header, hgroup, menu, nav, section {
 
 body {
     line-height: 1;
-    background-color: rgb(32, 32, 32);
+    background-image: url(./Background.JPG);
 }
