--- a/Orange-notes-Interface/src/components/Button/Button.css
+++ b/Orange-notes-Interface/src/components/Button/Button.css
@@ -5,12 +5,17 @@ button{
     width: 100px;
     height: 48px;
     margin: 10px;
-    border-bottom-style: solid;
-    border-bottom-color: #ff3200;
-    border-bottom-width: 3px;
-    border-right-style: solid;
-    border-right-color: #ff3200;
-    border-right-width: 3px;
+    border-bottom: solid #ff3200 3px;
+    border-right: solid #ff3200 3px;
+    border-left: 0px;
+    border-top: 0px;
     color: #fff;
     font-size: 21px;
+    cursor: pointer;
+}
+
+button:hover{
+    border-color: #e9973A;
+    outline: 0;
+    box-shadow: 0 0 0 0.1rem rgba(233, 151, 58 , 0.25);
 }
