--- a/Orange-notes-Interface/src/components/Footer/Footer.css
+++ b/Orange-notes-Interface/src/components/Footer/Footer.css
@@ -7,12 +7,6 @@
     background-color: #000;
     border-top: solid 3px #ff5a23;
     color: #FFFFFF;
-    margin: 30px 0 0 0;
+    margin:0;
 }
 
-.footersvg{
-    width: 100vw;
-    height: 120px;
-    ;
-    background-repeat: no-repeat;
-}
