--- a/Orange-notes-Interface/src/pages/styles/Home.css
+++ b/Orange-notes-Interface/src/pages/styles/Home.css
@@ -26,3 +26,27 @@
 .Done{
     color: green
 }
+
+.themeContainer{
+    margin-top: 20px;
+    margin-left: 20px;
+    display: grid;
+    grid-template-columns: 25% 25% 25%;
+
+}
+
+.card{
+    color: #FF5a23;
+    border-radius: 10px;
+    border:1px solid #FF5a23 ;
+    width: 300px;
+    background-color: rgb(32,32,32);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.taskContainer{
+
+}
