Implementação do botão de criar mais temas e mais tarefas

--- a/Orange-notes-Interface/src/pages/styles/Home.css
+++ b/Orange-notes-Interface/src/pages/styles/Home.css
@@ -1,7 +1,7 @@
 .homeMain{
     margin-top: 83px;
     background-color: rgba(32,32,32, 0.98);
-    height: calc(100% - 203px);
+    min-height: calc(100% - 203px);
 }
 
 .h1Home{
@@ -20,6 +20,7 @@
     margin-left: 20px;
     display: grid;
     grid-template-columns: 25% 25% 25%;
+    gap:20px
 }
 
 .card{
