--- a/Orange-notes-Interface/src/pages/styles/Home.css
+++ b/Orange-notes-Interface/src/pages/styles/Home.css
@@ -13,6 +13,7 @@
 .pHome{
     padding-top: 10px;
     padding-left: 20px;
+    word-wrap: break-word;
 }
 
 .themeContainer{
@@ -20,19 +21,19 @@
     margin-left: 20px;
     display: grid;
     grid-template-columns: 25% 25% 25%;
-    gap:20px
+    gap:5%;
 }
 
 .card{
     color: #FF5a23;
     border-radius: 10px;
     border:1px solid #FF5a23 ;
-    width: 300px;
     background-color: rgb(32,32,32);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .taskContainer{
@@ -54,14 +55,14 @@ div.Backlog,div.Done,div.Doing{
 }
 
 .Backlog{
-    color:blueviolet
+    color:lightblue
 }
 
 .Doing{
     color: yellow;
 }
 div.Doing{
-    margin-left: 40vw;
+    margin-left: 30vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,10 +70,17 @@ div.Doing{
 .Done{
     color: chartreuse
 }
+div.Done{
+    margin-left: 60vw;
+}
 
 .add{
     width: 25px;
     height: 25px;
     border-radius: 80%;
     border: 0px;
+}
+
+.cardForm{
+    width: 100%
 }
