--- a/Orange-notes-Interface/src/pages/styles/Login.css
+++ b/Orange-notes-Interface/src/pages/styles/Login.css
@@ -6,3 +6,14 @@
     height: 80vh;
     margin: 0
 }
+
+.loading{
+    display: flex;
+    align-items: center;
+    font-size: 56px;
+    justify-content: center;
+    margin-top: 80px;
+    height: calc(100vh - 201px);
+    background-color: rgba(32,32,32,0.98);
+
+}
