Aplica a responsividade no projeto para telas menores que 700 e 900 px

--- a/Orange-notes-Interface/src/components/Div/Div.css
+++ b/Orange-notes-Interface/src/components/Div/Div.css
@@ -31,3 +31,14 @@
     align-items: center;
     justify-content: center;
 }
+
+@media(max-width: 700px){
+    .conteudo{
+        flex-direction: column;
+}
+
+.divmenor{
+    width: 80vw
+}
+
+}
