--- a/Orange-notes-Interface/src/components/Header/Header.css
+++ b/Orange-notes-Interface/src/components/Header/Header.css
@@ -21,3 +21,9 @@
     font-size: 72px;
     font-family: 'Montserrat', sans-serif;
 }
+
+@media(max-width: 700px){
+    .ONtitle{
+        font-size: 20px;
+}
+}
